# cnc-kalkulacka

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: android.yml
src/: lib.rs
