[package]
name = "cnc_kalkulacka"
version = "0.1.0"
edition = "2021"

# Knihovna se jmenuje main_lib (to fungovalo pro sestavení)
[lib]
name = "main_lib"
crate-type = ["cdylib"]

[dependencies]
# Zůstaneme u moderní verze, která už jednou prošla buildem
eframe = { version = "0.27.2", default-features = false, features = ["glow", "android-native-activity"] }
android-activity = { version = "0.5.2", features = ["native-activity"] }
log = "0.4"
android_logger = "0.13"

[package.metadata.android]
package = "com.cnc.simple" 
label = "CNC Final"
android_version = 33
target_sdk_version = 33
min_sdk_version = 21
fullscreen = true
lib_name = "main_lib"
permissions = ["android.permission.INTERNET"]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

# TOTO JE TA OPRAVA PÁDŮ:
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
