[package]
name = "cnc_kalkulacka"
version = "0.1.0"
edition = "2021"

[lib]
name = "main_lib"
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = ["glow", "android-native-activity"] }
android-activity = { version = "0.5.2", features = ["native-activity"] }
log = "0.4"
android_logger = "0.13"

[package.metadata.android]
package = "com.cnc.simple"
label = "CNC Kalkulačka"
android_version = 33
target_sdk_version = 33
min_sdk_version = 21
fullscreen = true
lib_name = "main_lib"
permissions = ["android.permission.INTERNET"]
# Stavíme pro obě architektury, aby to jelo na všech telefonech
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
